[gd_scene load_steps=4 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/RegularRed.fnt" type="BitmapFont" id=3]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="GridContainer" type="GridContainer" parent="Node2D"]
margin_left = 180.0
margin_top = 80.0
margin_right = 780.0
margin_bottom = 480.0
rect_min_size = Vector2( 600, 400 )
columns = 2

[node name="Label" type="Label" parent="Node2D/GridContainer"]
margin_top = 3.0
margin_right = 253.0
margin_bottom = 27.0
rect_min_size = Vector2( 200, 24 )
custom_fonts/font = ExtResource( 2 )
text = "Game Speed"

[node name="Container" type="HBoxContainer" parent="Node2D/GridContainer"]
margin_left = 257.0
margin_right = 533.0
margin_bottom = 30.0
alignment = 1

[node name="Button" type="Button" parent="Node2D/GridContainer/Container"]
margin_right = 78.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Normal"

[node name="Button2" type="Button" parent="Node2D/GridContainer/Container"]
margin_left = 82.0
margin_right = 162.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
custom_fonts/font = ExtResource( 2 )
text = "Fast"

[node name="Button3" type="Button" parent="Node2D/GridContainer/Container"]
margin_left = 166.0
margin_right = 276.0
margin_bottom = 30.0
rect_min_size = Vector2( 110, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Breakneck"

[node name="Label2" type="Label" parent="Node2D/GridContainer"]
margin_top = 42.0
margin_right = 253.0
margin_bottom = 66.0
rect_min_size = Vector2( 200, 24 )
custom_fonts/font = ExtResource( 2 )
text = "Touch Mode"

[node name="Container2" type="HBoxContainer" parent="Node2D/GridContainer"]
margin_left = 257.0
margin_top = 34.0
margin_right = 533.0
margin_bottom = 74.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Node2D/GridContainer/Container2"]
margin_left = 100.0
margin_right = 176.0
margin_bottom = 40.0

[node name="Label3" type="Label" parent="Node2D/GridContainer"]
margin_top = 86.0
margin_right = 253.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 24 )
custom_fonts/font = ExtResource( 2 )
text = "Detailed Descriptions      "

[node name="Container3" type="HBoxContainer" parent="Node2D/GridContainer"]
margin_left = 257.0
margin_top = 78.0
margin_right = 533.0
margin_bottom = 118.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Node2D/GridContainer/Container3"]
margin_left = 100.0
margin_right = 176.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="Node2D"]
margin_left = 450.0
margin_top = 500.0
margin_right = 510.0
margin_bottom = 530.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="Label" type="Label" parent="Node2D"]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 48.0
rect_min_size = Vector2( 960, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1

[connection signal="pressed" from="Node2D/GridContainer/Container/Button" to="Node2D" method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/GridContainer/Container/Button2" to="Node2D" method="_on_Button2_pressed"]
[connection signal="pressed" from="Node2D/GridContainer/Container/Button3" to="Node2D" method="_on_Button3_pressed"]
[connection signal="pressed" from="Node2D/GridContainer/Container2/CheckButton" to="Node2D" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Node2D/GridContainer/Container3/CheckButton" to="Node2D" method="_on_CheckButton2_pressed"]
[connection signal="pressed" from="Node2D/Button" to="Node2D" method="_on_exit_button_pressed"]
